## -*- Makefile -*- mode
## Process this file with automake to create Makefile.in
#
# nucleo/gl/shading/Makefile.am --
#
# Copyright (C) Nicolas Roussel
#
# See the file LICENSE for information on usage and redistribution of
# this file, and for a DISCLAIMER OF ALL WARRANTIES.
#

AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}

noinst_LTLIBRARIES = libglshading.la

libglshading_la_SOURCES = glShader.cxx

pkgincludedir = $(includedir)/nucleo/gl/shading
pkginclude_HEADERS = glShader.H
